ressurser/yaml-eksempler/deploy-complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: api-deploy
strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1 # Max number (or %) of extra pods
     maxUnavailable: 0 # Max number of missing pods
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-api
    spec:
      containers:
      - image: "ghcr.io/varianter/k8s-101:v1.1.1"
        name: api
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 3
          initialDelaySeconds: 12
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 1
          initialDelaySeconds: 5
        resources: {}
status: {}
