ressurser/yaml-eksempler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.local
    http:
      paths:
      - backend:
          service:
            name: api-service
            port:
              number: 80
        path: /
        pathType: Prefix
